# book-blend-backend

./: .gitignore  README.md  all_books.csv  all_books.json  docs.json  friends.py  friends.txt  goodreads_books.csv  goodreads_parser.py  helper_functions.py  main.py  pyproject.toml  requirements.txt  rss_feed_books.py  scoring_method.md  user_info.py  vercel.json
api/: index.py  main.py
docs/: generate_docs.py  openapi.json
util/: ai_insights.py  blend.py  rss_feed_books.py  user_info.py
