[project]
name = "book-blend-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "certifi>=2025.1.31",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "lxml>=5.3.2",
    "mangum>=0.19.0",
    "openai>=1.98.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "uvicorn>=0.35.0",
]
